midpoint/release/3.9/index.adoc
---
release-version: '3.9'
---
= MidPoint 3.9 "Galileo"
:page-layout: release
:release-version: 3.9
:page-wiki-name: Release 3.9
:page-wiki-id: 25329787
:page-wiki-metadata-create-user: semancik
:page-wiki-metadata-create-date: 2018-06-07T13:52:54.979+02:00
:page-wiki-metadata-modify-user: semancik
:page-wiki-metadata-modify-date: 2020-01-30T10:43:52.439+01:00
:page-liquid:

Release {release-version} is a twenty-seventh midPoint release code-named _Galileo_.
The {release-version} release brings broad assortment of improvements and new features in almost all areas of midPoint functionality.

++++
{% include release-data.html %}
++++

++++
{% capture dedicationContent %}
<p>
    <a href="https://en.wikipedia.org/wiki/Galileo_Galilei">Galileo Galilei</a> (1564 - 1642) was Italian polymath.
    He was an astronomer, physicist and engineer.
    Galileo studied speed and velocity, gravity and free fall, the principle of relativity, inertia, motion, pendulums, inventing thermoscope, military compass, he is famous for using telescope for scientific observation of celestial bodies.
    Overall Galileo made significant achievements in many fields of human knowledge, science and technology.
</p>
<p>
    Similarly to Galileo himself, the reach of midPoint 3.9 is surprisingly broad.
    There are significant user interface improvements, improvements to security (especially multi-tenant authorizations), major improvements to internal provisioning mechanism and a large selection of smaller improvements.
    There are several major improvements to the midPoint ecosystem: significant improvements to connector framework, major release of LDAP connector, new GUI testing framework, containerization improvements and so on.
    MidPoint 3.9 is yet another major milestone on a midPoint journey.
</p>
{% endcapture %}
{% include release-dedication.html content=dedicationContent %}
++++

== Features

midPoint 3.9 provides following features:

* *Common identity management data model*

** Extensible object types:

*** User objects to represent users, physical persons and xrefv:/midpoint/reference/before-4.8/misc/persona/[personas]

*** Role objects to represent roles, privileges, jobs and so on

*** Org objects to represent xrefv:/midpoint/reference/before-4.8/org/organizational-structure/[organizational units], teams, workgroups, etc.

*** Service objects to represent servers, network devices, mobile devices, network services, etc.

** Numerous built-in properties

** Extensibility by custom properties

** Completely schema-aware system

*** Dynamic schema automatically retrieved from resource

*** Support for primitive data types

*** Native support of multi-value attributes

*** Limited support for complex data types

** Processing and computation fully based on xrefv:/midpoint/reference/before-4.8/concepts/relativity/[relative changes]

** Off-the-shelf support for user password credentials

** Off-the-shelf support for activation (users, roles, orgs, services) +

*** Enabled/disabled states (extensible in the future)

*** Support for user validity time constraints (valid from, valid to)

** Object template to define policies, default values, etc.

*** Ability to use conditional mappings (e.g. to create RB-RBAC setup)

*** Ability to include other object templates

*** Global and resource-specific template setup

** Representation of all configuration and data objects in XML, JSON and YAML

** Annotation support (such as "experimental" and "deprecated" annotation to control data model evolution)

** xrefv:/midpoint/reference/before-4.8/schema/polystring-normalization/[Customizable PolyString normalization]


* *Identity management*

** xrefv:/midpoint/reference/before-4.8/synchronization/examples/[Enabling and disabling accounts]

** Support for xrefv:/midpoint/reference/before-4.8/expressions/[mapping and expressions] to determine account attributes

** xrefv:/midpoint/reference/before-4.8/resources/resource-configuration/schema-handling/[Multi-layer attribute access limitations]

** xrefv:/midpoint/reference/before-4.8/resources/provisioning-dependencies/[Provisioning dependencies]

*** Higher-order dependencies (enables partial support for circular provisioning dependencies)

** xrefv:/midpoint/reference/before-4.8/synchronization/consistency/[Provisioning robustness] - ability to provision to non-accessible (offline) resources

** xrefv:/midpoint/reference/before-4.8/synchronization/consistency/[Provisioning consistency] - ability to handle provisioning errors and compensate for inconsistencies

** xrefv:/midpoint/reference/before-4.8/resources/propagation/[Provisioning Propagation]

** Support for xrefv:/midpoint/reference/before-4.8/resources/resource-configuration/schema-handling/#attribute-tolerance[tolerant attributes]

*** Ability to select tolerant and non-tolerant values using a pattern (regexp)

** Support for volatile attributes (attributes changed by the resource)

** xrefv:/midpoint/reference/before-4.8/concepts/matching-rules/[Matching Rules]

*** Matching rules to support case insensitive attributes, DN and UUID attributes, XML attributes, etc.
(extensible)

*** Automatic matching rule discovery

** Provisioning scripts

*** Ability to execute scripts before/after provisioning operations

*** Ad-hoc provisioning script execution

*** xrefv:/midpoint/reference/before-4.8/schema/object-references/[Object schema validation during import] (can be switched off)

*** xrefv:/midpoint/reference/before-4.8/schema/object-references/[Smart references between objects based on search filters]

** Advanced support for account activation (enabled/disabled states)

*** Standardized account activation that matches user activation schema for easy integration

*** Ability to simulate activation capability if the connector does not provide it

*** Support for account lock-out

*** Support for account validity time constrains (valid from, valid to)

*** Support easy xrefv:/midpoint/reference/before-4.8/resources/resource-configuration/schema-handling/activation/[activation existence mappings] (e.g. easy configuration of "disables instead of delete" feature)

*** Support for xrefv:/midpoint/reference/before-4.8/expressions/mappings/[mapping time constraints] in activation mappings that allow configuring time-related provisioning features such as xrefv:/midpoint/reference/before-4.8/resources/resource-configuration/schema-handling/activation/[deferred account delete or pre-provisioning].

** Ability to specify set of xrefv:/midpoint/reference/before-4.8/resources/resource-configuration/protected-accounts/[protected accounts] that will not be affected by IDM system

** Support for base context searches for connectors that support object hierarchies (such as LDAP)

** xrefv:/midpoint/reference/before-4.8/misc/notifications/[Notifications]

** xrefv:/midpoint/reference/before-4.8/misc/bulk/[Bulk actions]

** Passive xrefv:/midpoint/reference/before-4.8/resources/attribute-caching/[Attribute Caching] (EXPERIMENTAL)

** Partial multi-tenancy support


* *Synchronization*

** xrefv:/midpoint/reference/before-4.8/synchronization/introduction/[Live synchronization]

** xrefv:/midpoint/reference/before-4.8/concepts/relativity/[Reconciliation]

*** Ability to execute scripts before/after reconciliation

** Correlation and confirmation expressions

*** Conditional correlation expressions

** Concept of _channel_ that can be used to adjust synchronization behaviour in some situations

** xrefv:/midpoint/reference/before-4.8/synchronization/generic-synchronization/[Generic Synchronization] allows synchronization of roles to groups to organizational units to ... anything

** Self-healing xrefv:/midpoint/reference/before-4.8/synchronization/consistency/[consistency mechanism]


* *Advanced RBAC*

** xrefv:/midpoint/reference/before-4.8/expressions/expressions/[Expressions in the roles]

** Hierarchical roles

** Conditional roles and assignments/inducements

** Parametric roles (including ability to assign the same role several times with different parameters)

** Temporal constraints (validity dates: valid from, valid to)

** xrefv:/midpoint/reference/before-4.8/roles-policies/metaroles/gensync/[Metaroles]

** Role catalog

** Role request based on shopping cart paradigm

** Several xrefv:/midpoint/reference/before-4.8/synchronization/projection-policy/[assignment enforcement modes]

*** Ability to specify global or resource-specific enforcement mode

*** Ability to "legalize" assignment that violates the enforcement mode

** Rule-based RBAC (RB-RBAC) ability by using conditional mappings in xrefv:/midpoint/reference/before-4.8/expressions/object-template/[user template] and xrefv:/midpoint/reference/before-4.8/roles-policies/role-autoassignment/[role autoassignment] and entitlement associations

** GUI support for entitlement listing, membership and editing

** Entitlement approval

** User-friendly entitlement association management


* *Identity governance*

** Powerful xrefv:/midpoint/reference/before-4.8/org/organizational-structure/[organizational structure management]

** xrefv:/midpoint/reference/before-4.8/cases/workflow-3/[Workflow support] (based on link:http://www.activiti.org/[Activiti] engine)

*** Declarative policy-based multi-level xrefv:/midpoint/reference/before-4.8/cases/approval/[approval] process

*** Visualization of approval process

** xrefv:/midpoint/reference/before-4.8/concepts/object-lifecycle/[Object lifecycle] property

** Object history (time machine)

** xrefv:/midpoint/reference/before-4.8/roles-policies/policy-rules/[Policy Rules] as a unified mechanism to define identity management, governance and compliance policies

** xrefv:/midpoint/reference/before-4.8/roles-policies/segregation-of-duties/[Segregation of Duties] (SoD) +

*** Many options to define xrefv:/midpoint/reference/before-4.8/roles-policies/segregation-of-duties/[role exclusions]

*** SoD approvals

*** SoD certification

** Assignment constraints for roles and organizational structure

** xrefv:/midpoint/reference/before-4.8/roles-policies/certification/[Access certification]

** Ad-hoc recertificaiton

** Basic xrefv:/midpoint/reference/before-4.8/roles-policies/role-lifecycle/[role lifecycle] management (role approvals)

** xrefv:/midpoint/reference/before-4.8/roles-policies/applicable-policies/[User-friendly policy selection]

** xrefv:/midpoint/reference/before-4.8/misc/deputy/[Deputy] (ad-hoc privilege delegation)

** Escalation in approval and certification processes

** xrefv:/midpoint/reference/before-4.8/misc/persona/[Personas]

** Rich assignment meta-data


* *Expressions, mappings and other dynamic features*

** xrefv:/midpoint/reference/before-4.8/expressions/sequences/[Sequences] for reliable allocation of unique identifiers

** xrefv:/midpoint/reference/before-4.8/expressions/expressions/[Customization expressions]

*** xrefv:/midpoint/reference/before-4.8/expressions/expressions/script/groovy/[Groovy]

*** Python

*** xrefv:/midpoint/reference/before-4.8/expressions/expressions/script/javascript/[JavaScript (ECMAScript)]

*** Built-in libraries with a convenient set of functions

** xrefv:/midpoint/reference/before-4.8/expressions/expressions/[PolyString] support allows automatic conversion of strings in national alphabets

** Mechanism to iteratively determine unique usernames and other identifier

** xrefv:/midpoint/reference/before-4.8/expressions/function-libraries/[Function libraries]


* *Web-based administration user interface* +

** Ability to execute identity management operations on users and accounts

** User-centric views

** Account-centric views (browse and search accounts directly)

** Resource wizard

** Layout automatically adapts to screen size

** Easily customizable look & feel

** Built-in XML editor for identity and configuration objects

** Identity merge

** GUI support for xrefv:/midpoint/reference/before-4.8/samples/configurable-transform-sample/[more complex data in object extension] (containers), improved GUI customization (experimental)

** Support for custom static web content

* *Self-service*

** User profile page

** Password management page

** Role selection and request dialog

** Self-registration

** Email-based password reset


* *Connectors*

** Integration of xref:/connectors/connectors/[ConnId identity connector framework]

*** Support for Evolveum Polygon connectors

*** Support for ConnId connectors

*** Support for OpenICF connectors (limited)

** Automatic generation and caching of xrefv:/midpoint/reference/before-4.8/resources/resource-schema/[resource schema] from the connector

** xref:/midpoint/architecture/archive/data-model/midpoint-common-schema/connectortype/[Local connector discovery]

** Support for connector hosts and remote xref:/midpoint/architecture/archive/data-model/midpoint-common-schema/connectortype/[connectors], xref:/connectors/connectors/[identity connector] and xref:/midpoint/architecture/archive/data-model/midpoint-common-schema/connectorhosttype/[connectors host type]

** Remote connector discovery

** xrefv:/midpoint/reference/before-4.8/resources/manual/[Manual Resource and ITSM Integration]

** xref:/midpoint/architecture/archive/subsystems/provisioning/ucf/[Unified Connector Framework (UCF) layer to allow more provisioning frameworks in the future]


* *Flexible identity repository implementations and SQL repository implementation*

** xrefv:/midpoint/reference/before-4.8/repository/generic/implementation/[Identity repository based on relational databases]

** xref:/midpoint/guides/admin-gui-user-guide/#keeping-metadata-for-all-objects-creation-modification-approvals[Keeping metadata for all objects] (creation, modification, approvals)

** xrefv:/midpoint/reference/before-4.8/deployment/removing-obsolete-information/[Automatic repository cleanup] to keep the data store size sustainable


* *Security*

** Fine-grained authorization model

*** xrefv:/midpoint/reference/before-4.8/security/authorization/configuration/[Authorization expressions]

*** Limited xrefv:/midpoint/reference/before-4.8/security/power-of-attorney/[power of attorney] implementation

** Organizational structure and RBAC integration

** Delegated administration

** Password management

*** Password distribution

*** xrefv:/midpoint/reference/before-4.8/security/credentials/password-policy/[Password policies]

*** Password retention policy

*** Password metadata

*** Self-service password management

*** Password storage options (encryption, hashing)

*** Mail-based initialization of passwords for new accounts

** CSRF protection

** Auditing to xrefv:/midpoint/reference/before-4.8/security/audit/#logfile-auditing[file (logging)]

** Auditing to xrefv:/midpoint/reference/before-4.8/security/audit/#database-table-auditing[SQL table]

** Interactive audit log viewer


* *Extensibility*

** xrefv:/midpoint/reference/before-4.8/schema/custom-schema-extension/[Custom schema extensibility]

** xrefv:/midpoint/reference/before-4.8/concepts/clockwork/scripting-hooks/[Scripting Hooks]

** xrefv:/midpoint/reference/before-4.8/misc/lookup-tables/[Lookup Tables]

** Support for overlay projects and deep customization

** Support for programmatic custom GUI forms (Apache Wicket components)

** Basic support for declarative custom forms

** API accessible using a REST, web services (SOAP) and local JAVA calls


* *Reporting*

** Scheduled reports

** Lightweight reporting (CSV export) built into user interface

** Comprehensive reporting based on Jasper Reports

** xrefv:/midpoint/reference/before-4.8/misc/reports/post-report-script/[Post report script]


* *Internals*

** xrefv:/midpoint/reference/before-4.8/tasks/task-manager/[Task management]

*** xrefv:/midpoint/reference/before-4.8/tasks/task-template/[Task template]

*** xrefv:/midpoint/reference/before-4.8/tasks/node-sticky-tasks/[Node-sticky tasks]

*** xref:/midpoint/devel/design/multi-node-partitioned-and-stateful-tasks/['Multi-node, partitioned and stateful tasks']


* *Operations*

** Lightweight deployment structure with two deployment options:

*** xrefv:/midpoint/reference/before-4.8/deployment/stand-alone-deployment/[Stand-alone deployment]

*** Deployment to web container (WAR)

** xrefv:/midpoint/reference/before-4.8/tasks/task-manager/[Multi-node task manager component with HA support]

** Comprehensive logging designed to aid troubleshooting

** Enterprise class scalability (hundreds of thousands of users)


* *Documentation*

** xref:/midpoint/[Administration documentation publicly available in the wiki]

** xref:/midpoint/architecture/[Architectural documentation publicly available in the wiki]

** Schema documentation automatically generated from the definition (xrefv:/midpoint/reference/before-4.8/schema/schemadoc/[schemadoc])

== Changes With Respect to Version 3.8

* User interface improvements

** Improved assignment/inducement target selection popup

** Additional registration form based on object lifecycle

** Form validation expressions

** New system configuration page

** xrefv:/midpoint/reference/before-4.8/admin-gui/admin-gui-config/[Custom actions for object lists] ("user" tasks that can be launched from GUI)

** xrefv:/midpoint/reference/before-4.8/security/authentication/post-authentication-configuration/[Custom pre-registration form]

** Shopping cart improvements

** Organization tree page performance improvements

** Miscellaneous user experience improvements


* Governance improvements

** Certification campaigns can be run only for non-decided cases

** Improved certification and workitems reports


* Customization Improvements

** xrefv:/midpoint/reference/before-4.8/concepts/relation/relation-configuration/[Relation Configuration]

** xrefv:/midpoint/reference/before-4.8/deployment/service-account-management/[Service Account Management]

** Minor expression evaluation improvements

** Support for `subtype` in assignment and inducement

** Minor improvements to xrefv:/midpoint/reference/before-4.8/expressions/expressions/script/functions/midpoint/[midPoint script libraries]


* Security improvements

** Separate xrefv:/midpoint/reference/before-4.8/security/authorization/configuration/[authorizations] for _get_ and _search_ operations.

** xrefv:/midpoint/reference/before-4.8/deployment/multitenancy/[Multitenancy] authorizations improvements

** xrefv:/midpoint/reference/before-4.8/security/authorization/configuration/[Authorization zone of control]

** Authorization improvements to handle assignments and inducements

** Minor security questions improvement.


* Provisioning

** Full use of improved ConnId framework (1.5.0.0)

** Minor improvements to connector paging support

** Full support for capabilities per object type

** Major update of consistency mechanism


* Connectors

** Support for native timestamps in ConnId framework, xref:/connectors/connectors/com.evolveum.polygon.connector.ldap.LdapConnector/[LDAP] and xref:/connectors/connectors/com.evolveum.polygon.connector.ldap.ad.AdLdapConnector/[Active Directory] connectors.

** Full support for ConnId updateDelta() operation in LDAP and AD connectors.

** Additional search filter support in LDAP and AD connectors.

** Active directory connector may use xref:/connectors/resources/active-directory/password-change/[user's own identity when changing password]

** Support for connector instance name (InstanceNameAware)

** Minor improvements to CSV connector (contributed)


* Miscellaneous improvements

** Improved documentation

** Error criticality handling improvement

** Legacy support for XPath2 was removed, expression processing code was cleaned up.

** Improved Maven overlay support

** Run bulk action from policy rules.

** Docker containerization improvements.

** User interface testing framework (a.k.a. "Schroedinger")

** Automatic detection of database schema version and compatibility

** Support for listing of object items that are deprecated or planned for removal

** Minor improvements to REST interface

PostgreSQL 9.4 and earlier is no longer supported. +
Microsoft SQL Server 2012 is no longer supported. +
Tomcat 8.0.x is no longer supported (Tomcat 8.0.x is EOL). +
XPath2 is no longer supported.
Please migrate your XPath2 scripts to Groovy, JavaScript or Python.

[TIP]
.Next version: 4.0
====
Next planned midPoint version is version 4.0. This means that a major release is planned after the 3.9 release.
Major release 4.0 is likely to introduce changes, that are not strictly compatible with midPoint 3.x. We mostly plan removal of schema elements that are deprecated for a long time or elements that were never really used.
Therefore this move should not affect midPoint deployments that are maintained properly.
MidPoint 3.9 includes a tool to check whether your deployment is likely to be affected by midPoint 4.0, which may give you sufficient time to prepare for 4.0 release.
You can use new `verify` command for xrefv:/midpoint/reference/before-4.8/deployment/ninja/[Ninja] command-line tool to check your deployment.

====

++++
{% include release-quality.html %}
++++

=== Limitations

* MidPoint comes with a bundled LDAP-based eDirectory connector.
This connector is stable, however it is not included in the normal midPoint support.
Support for this connector has to be purchased separately.

* There is an option to modify midPoint to support LDAP and CAS authentication by using Spring Security modules.
This method is used in several midPoint deployments.
However, such authentication modules are not officially supported as part of usual midPoint subscriptions.
Only community-level support is provided for those modules.
Commercial-grade support for this authentication method is available, but it has to be explicitly negotiated in a subscription contract.

* MidPoint user interface has flexible (fluid) design and it is able to adapt to various screen sizes, including screen sizes used by some mobile devices.
However, midPoint administration interface is also quite complex and it would be very difficult to correctly support all midPoint functionality on very small screens.
Therefore midPoint often works well on larger mobile devices (tablets) it is very likely to be problematic on small screens (mobile phones).
Even though midPoint may work well on mobile devices, the support for small screens is not included in standard midPoint subscription.
Partial support for small screens (e.g. only for self-service purposes) may be provided, but it has to be explicitly negotiated in a subscription contract.

* There are several add-ons and extensions for midPoint that are not explicitly distributed with midPoint.
This includes midPoint plug-in for Eclipse IDE, extension of Jasper studio, Java client library, various samples, scripts, connectors and other non-bundled items.
Support for these non-bundled items is limited.
Generally speaking those non-bundled items are supported only for platform subscribers and those that explicitly negotiated the support in their contract.
For other cases there is only community support available.
For those that are interested in official support for IDE add-ons there is a possibility to use xref:/support/subscription-sponsoring/[subscription] to help us develop midPoint studio (bug:MID-4701[]).

== Platforms

MidPoint is known to work well in the following deployment environment.
The following list is list of *tested* platforms, i.e. platforms that midPoint team or reliable partners personally tested with this release.
The version numbers in parentheses are the actual version numbers used for the tests.

It is very likely that midPoint will also work in similar environments.
But only the versions specified below are supported as part of midPoint subscription and support programs - unless a different version is explicitly agreed in the contract.

Support for some platforms is marked as "deprecated".
Support for such deprecated versions can be removed in any midPoint release.
Please migrate from deprecated platforms as soon as possible.


=== Java

* OpenJDK 8 (1.8.0_91, 1.8.0_111, 1.8.0_151, 1.8.0_181)

* Sun/Oracle Java SE Runtime Environment 8 (1.8.0_45, 1.8.0_65, 1.8.0_74, 1.8.0_131)

=== Web Containers

* Apache Tomcat 8.5 (8.5.4).
Tomcat 8.0.x is no longer supported as its support life is over (EOL).

[NOTE]
.Web container (application server) support
====
MidPoint 3.7 introduced xrefv:/midpoint/reference/before-4.8/deployment/stand-alone-deployment/[Stand-alone deployment] form that does not need an application server.
This is the primary deployment model for midPoint.
The deployment to web container is still supported.
However the only supported web container is Apache Tomcat.
Other web containers (application servers) may be supported if the support is explicitly negotiated in midPoint subscription.
Except for those cases midPoint development team will not provide any support for other web containers.

Currently there are no plans to remove support for deployed midPoint installation using a WAR file.
However, it is possible that this deployment form will get phased out eventually unless there are active subscribers preferring this deployment method.
MidPoint subscription is strongly recommended if you plan to use this method in the future.
====

=== Databases

* H2 (embedded).
Supported only in embedded mode.
Not supported for production deployments.
Only the version specifically bundled with midPoint is supported. +
H2 is intended only for development, demo and similar use cases.
It is *not* supported for any production use.
Also, upgrade of deployments based on H2 database are not supported.

* PostgreSQL 9.5 (9.5, 9.5.1).

* MariaDB (10.0.28)

* MySQL 5.7 (5.7)

* Oracle 12c

* Microsoft SQL Server 2014

=== Supported Browsers

* Firefox (any recent version)

* Safari (any recent version)

* Chrome (any recent version)

* Opera (any recent version)

* Microsoft Internet Explorer (version 9 or later)

Recent version of browser as mentioned above means any stable stock version of the browser released in the last two years.
We formally support only stock, non-customized versions of the browsers without any extensions or other add-ons.
According to the experience most extensions should work fine with midPoint.
However, it is not possible to test midPoint with all of them and support all of them.
Therefore, if you chose to use extensions or customize the browser in any non-standard way you are doing that on your own risk.
We reserve the right not to support customized web browsers.

Microsoft Internet Explorer compatibility mode is *not* supported.

== Important Bundled Components

[%autowidth]
|===
| Component | Version | Description

| ConnId
| 1.5.0.0
| ConnId Connector Framework


| LDAP connector bundle
| 2.0
| LDAP, Active Directory and eDirectory connector


| CSV connector
| 2.2
| Connector for CSV files


| DatabaseTable connector
| 1.4.2.0
| Connector for simple database tables

|===

++++
{% include release-download.html %}
++++

[NOTE]
.Stand-alone deployment model
====
MidPoint deployment method has changed in midPoint release 3.7. xrefv:/midpoint/reference/before-4.8/deployment/stand-alone-deployment/[Stand-alone deployment] is now the default deployment method.
MidPoint default configuration, scripts and almost everything else was adapted for this method.

* *New midPoint users* and *new deployments* should simply follow the xref:install.adoc[installation manual].

* *Existing deployments* prior to version 3.7 may keep using exactly the same configuration as before.
xref:/midpoint/install/bare-installation/webapp-deployment/[Deployment of midPoint as Web Application] is still supported as an alternative.
However, xrefv:/midpoint/reference/before-4.8/deployment/stand-alone-deployment/[stand-alone deployment] is now the primary option.
It is recommended to migrate the deployment based on application server to a stand-alone deployment in the future.
See our xrefv:/midpoint/reference/before-4.8/upgrade/tomcat-to-standalone/[brief migration guide].
====

== Upgrade

MidPoint is software that is designed for easy upgradeability.
We do our best to maintain strong backward compatibility of midPoint data model, configuration and system behavior.
However, midPoint is also very flexible and comprehensive software system with a very rich data model.
It is not humanly possible to test all the potential upgrade paths and scenarios.
Also some changes in midPoint behavior are inevitable to maintain midPoint development pace.
Therefore we can assure reliable midPoint upgrades only for link:https://evolveum.com/services/[midPoint subscribers]. This section provides overall overview of the changes and upgrade procedures.
Although we try to our best it is not possible to foresee all possible uses of midPoint.
Therefore the information provided in this section are for information purposes only without any guarantees of completeness.
In case of any doubts about upgrade or behavior changes please use services associated with link:https://evolveum.com/services/[midPoint subscription] or purchase link:https://evolveum.com/services/professional-services/[professional services].


=== Upgrade from midPoint 3.0, 3.1, 3.1.1, 3.2, 3.3, 3.3.1, 3.4, 3.4.1, 3.5, 3.5.1, 3.6, 3.6.1, 3.7, 3.7.1 and 3.7.2

Upgrade path from MidPoint 3.0 goes through midPoint 3.1, 3.1.1, 3.2, 3.3, 3.4.1, 3.5.1, 3.6.1 and 3.7.2. Upgrade to midPoint 3.1 first.
Then upgrade from midPoint 3.1 to 3.1.1, from 3.1.1 to 3.2 then to 3.3, then to 3.4.1, 3.5.1, 3.6.1, 3.7.2, 3.8 and finally to 3.9.

=== Upgrade from midPoint 3.8

MidPoint 3.9 data model is essentially backwards compatible with previous midPoint versions.
However as the data model was extended in 3.9 the database schema needs to be upgraded using the xrefv:/midpoint/reference/before-4.8/upgrade/database-schema-upgrade/[usual mechanism]. There were also other changes that may affect some deployments:

* Consistency mechanism in midPoint was update and aligned with manual connectors, taking into account possible future extension for asynchronous provisioning operations.
Old shadow "consistency" properties (`objectChange`, `result`, `attemptNumber`, `failedOperationType`) are no longer used.
Their content is ignored.
All operations that are not completed immediately are now recorded in `pendingOperation` container.

* Version numbers of some bundled connectors have changed.
Therefore connector references from the resource definitions that are using the bundled connectors need to be updated.

* New resource capability (delta update) was introduced.
Therefore please make sure that native resource capabilities are refreshed for resources that support delta update capability (most notably LDAP and AD connectors).

=== Changes in initial objects since 3.8

MidPoint has a built-in set of "initial objects" that it will automatically create in the database if they are not present.
This includes vital objects for the system to be configured (e.g. role `superuser` and user `administrator`). These objects may change in some midPoint releases.
But to be conservative and to avoid configuration overwrite midPoint does not overwrite existing objects when they are already in the database.
This may result in upgrade problems if the existing object contains configuration that is no longer supported in a new version.
Therefore the following list contains a summary of changes to the initial objects in this midPoint release.
The complete new set of initial objects is in the `config/initial-objects` directory in both the source and binary distributions.
Although any problems caused by the change in initial objects is unlikely to occur, the implementors are advised to review the following list and assess the impact on case-by-case basis:

* 000-system-configuration.xml: logging appender configuration updated

* 010-value-policy.xml: removed deprecated minOccurs

* 015-security-policy.xml: removed deprecated minOccurs

* 040-role-enduser.xml: reducing authorizations (get instead of read)

* 140-report-certification-campaigns.xml: report definition fixed

* 150-report-certification-cases.xml: report definition fixed

* 160-report-certification-decisions.xml: report definition fixed

* 200-lookup-languages.xml: new language: japanese, lithuanian

* 210-lookup-locales.xml: new language: japanese, lithuanian

=== Bundled connector changes since 3.8 and 3.8.1

* The *LDAP connector* and *AD Connector* were upgraded to the latest available version.
This version brings major changes that take advantage of ConnId framework development.
There is support for native timestamps.
But there is one important internal change.
LDAP and AD connectors now support "update delta" operation instead of legacy update operations.
Delta-based updates are superior to legacy method and this change resolves a lot of subtle problems of complex changes on resources.
However, the connector has to let midPoint know that it supports delta-based update operations.
This is done by the means of resource capabilities.
This happens automatically for new midPoint deployments.
Older midPoint deployments simply need to refresh (native) resource capabilities.

=== Behavior changes since 3.8 and 3.8.1

* Shadow objects now use pendingOperations to record operation retries.
Prior to 3.9 a different mechanism was used.
The mechanism of operation retries and manual resources was unified in midPoint 3.9.

* Dead shadows remain in midPoint repository for some time (7 days by default).
The reason is to avoid some corner cases.
But this also improves visibility, e.g. administrator can check operation result in the dead shadow.

* Refresh operation on shadow cleans up dead shadows and expired pending operations.
This normally happens during reconciliation.
The same refresh tasks that are used for xrefv:/midpoint/reference/before-4.8/resources/manual/configuration/[manual resources] can be used as a lightweight replacement to clean up the shadows without reconciliation.

* Error criticality handling definition was changed +


** Change of (experimental) criticality definition schema (boolean->fatal/partial).
This is incompatible change in schema.
However, this was justified in a minor release as this functionality is marked as xref:/midpoint/versioning/experimental/[experimental].

** PolicyViolationException has partial criticality by default.


* LDAP and AD connectors support only delta-based update operation now.
Please refresh native resource capabilities for those connectors to work well after upgrade to 3.9.

* Self-service password change is now using special self-service channel (http://midpoint.evolveum.com/xml/ns/public/gui/channels-3#selfService)

* XPath2 is no longer supported.
Please migrate your XPath2 scripts to Groovy, JavaScript or Python.

* Assembly of midPoint Maven artifacts and Maven overlay was fixed.
This may affect existing midPoint overlay projects.
Please have a look at the most recent midPoint overlay example and adjust your overlay projects accordingly.

* Interpretation of shadow with no kind/intent has changed.
Before 3.9 those shadows were interpreted as having _default_ kind/intent.
In 3.9 the meaning has changed.
MidPoint 3.9 now interprets shadows with no kind/intent in such a way as the kind/intent is _unknown_ (undetermined).
This should not affect existing deployment with correct configuration in any significant way.
However, deployments upgraded from 3.8 may experience a lot of updates to shadow kind/intent.
This may cause problems if object synchronization part of resource definition is not configured correctly.

* There were several improvements to "search iterative" functionality.
This should not affect existing deployment - unless for a few special cases that (incorrectly) relied on older behavior.
In case that your deployment is using search iterative method in a non-standard way additional testing is recommended after upgrade to 3.9.

* Authorizations maintain their zone of control by default.
In midPoint 3.9 the default authorizations allowed to change an object in such a way that it was no longer accessible to the user.
This default behavior was changed in midPoint 3.9, which now does not allow such change by default.
This is more intuitive and also more secure default behavior and it should affect only minimal number of existing deployments.
Old behavior can still be enabled if needed.

=== Public interface changes since 3.8

* There were several fixes and minor improvements to REST API.
The interface should be completely backward compatible.

* There were several fixes and minor improvements to IDM Model Java API.
The interface should be completely backward compatible.

=== Important internal changes since 3.8

These changes should not influence people that use midPoint "as is".
These changes should also not influence the XML/JSON/YAML-based customizations or scripting expressions that rely just on the provided library classes.
These changes will influence midPoint forks and deployments that are heavily customized using the Java components.

* There was a major update to provisioning mechanism that handles provisioning errors and operation retries (a.k.a. "consistency mechanism"). It was aligned with mechanism that supports manual resources.
Shadow objects now use pendingOperations to record operation retries.
Most of the algorithms in this part of the system were improved.


++++
{% include release-issues.html %}
++++

There is a support to set up storage of credentials in either encrypted or hashed form.
There is also unsupported and undocumented option to turn off credential storage.
This option partially works, but there may be side effects and interactions.
This option is not fully supported yet.
Do not use it or use it only at your own risk.
It is not included in any midPoint support agreement.

Native attribute with the name of 'id' cannot be currently used in midPoint (bug:MID-3872[]). If the attribute name in the resource cannot be changed then the workaround is to force the use of legacy schema.
In that case midPoint will use the legacy ConnId attribute names (icfs:name and icfs:uid).

JavaDoc is temporarily not available due to the link:https://bugs.openjdk.java.net/browse/JDK-8061305[issue in Java platform]. This issue is fixed in Java 9 platform, but backport of this fix to Java 8 is (quite surprisingly) not planned.
This should be fixed in midPoint 4.0 with Java 11 support.